--- a/zcash-zf-dag.html
+++ b/zcash-zf-dag.html
@@ -17,10 +17,10 @@
     </style>
   </head>
   <body>
-    <div id="dag"><svg width="871pt" height="2309pt"
- viewBox="0.00 0.00 871.00 2309.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 2305)">
-<polygon fill="white" stroke="transparent" points="-4,4 -4,-2305 867,-2305 867,4 -4,4"/>
+    <div id="dag"><svg width="871pt" height="2395pt"
+ viewBox="0.00 0.00 871.00 2395.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 2391)">
+<polygon fill="white" stroke="transparent" points="-4,4 -4,-2391 867,-2391 867,4 -4,4"/>
 <!-- ZcashFoundation/zebra#5297 -->
 <g id="node1" class="node open">
 <title>ZcashFoundation/zebra#5297</title>
@@ -584,34 +584,62 @@
 <path fill="none" stroke="black" d="M255.69,-2181C279.95,-2181 305.65,-2181 330.25,-2181"/>
 <polygon fill="black" stroke="black" points="330.35,-2184.5 340.35,-2181 330.35,-2177.5 330.35,-2184.5"/>
 </g>
-<!-- ZcashFoundation/ed25519&#45;zebra#77 -->
+<!-- ZcashFoundation/zebra#6812 -->
 <g id="node39" class="node open">
+<title>ZcashFoundation/zebra#6812</title>
+<g id="a_node39"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/6812" xlink:title="ZcashFoundation/zebra#6812&#10;Process abort in state&#10;tests on some macOS&#10;versions with Rust 1.70" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2301 24.5,-2301 24.5,-2233 255.5,-2233 255.5,-2301"/>
+<text text-anchor="middle" x="140" y="-2285.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#6812</text>
+<text text-anchor="middle" x="140" y="-2270.8" font-family="Times,serif" font-size="14.00">Process abort in state</text>
+<text text-anchor="middle" x="140" y="-2255.8" font-family="Times,serif" font-size="14.00">tests on some macOS</text>
+<text text-anchor="middle" x="140" y="-2240.8" font-family="Times,serif" font-size="14.00">versions with Rust 1.70</text>
+</a>
+</g>
+</g>
+<!-- ZcashFoundation/zebra#6824 -->
+<g id="node40" class="node closed">
+<title>ZcashFoundation/zebra#6824</title>
+<g id="a_node40"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/6824" xlink:title="ZcashFoundation/zebra#6824&#10;Restore macOS tests" target="_blank">
+<polygon fill="#fad8c7" stroke="black" points="571.5,-2286 340.5,-2286 340.5,-2248 571.5,-2248 571.5,-2286"/>
+<text text-anchor="middle" x="456" y="-2270.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#6824</text>
+<text text-anchor="middle" x="456" y="-2255.8" font-family="Times,serif" font-size="14.00">Restore macOS tests</text>
+</a>
+</g>
+</g>
+<!-- ZcashFoundation/zebra#6812&#45;&gt;ZcashFoundation/zebra#6824 -->
+<g id="edge18" class="edge">
+<title>ZcashFoundation/zebra#6812&#45;&gt;ZcashFoundation/zebra#6824</title>
+<path fill="none" stroke="black" d="M255.69,-2267C279.95,-2267 305.65,-2267 330.25,-2267"/>
+<polygon fill="black" stroke="black" points="330.35,-2270.5 340.35,-2267 330.35,-2263.5 330.35,-2270.5"/>
+</g>
+<!-- ZcashFoundation/ed25519&#45;zebra#77 -->
+<g id="node41" class="node open">
 <title>ZcashFoundation/ed25519&#45;zebra#77</title>
-<g id="a_node39"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/77" xlink:title="ZcashFoundation/ed25519&#45;zebra#77&#10;Add instructions to the&#10;README for updating this&#10;crate" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="280,-2301 0,-2301 0,-2233 280,-2233 280,-2301"/>
-<text text-anchor="middle" x="140" y="-2285.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#77</text>
-<text text-anchor="middle" x="140" y="-2270.8" font-family="Times,serif" font-size="14.00">Add instructions to the</text>
-<text text-anchor="middle" x="140" y="-2255.8" font-family="Times,serif" font-size="14.00">README for updating this</text>
-<text text-anchor="middle" x="140" y="-2240.8" font-family="Times,serif" font-size="14.00">crate</text>
+<g id="a_node41"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/77" xlink:title="ZcashFoundation/ed25519&#45;zebra#77&#10;Add instructions to the&#10;README for updating this&#10;crate" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="280,-2387 0,-2387 0,-2319 280,-2319 280,-2387"/>
+<text text-anchor="middle" x="140" y="-2371.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#77</text>
+<text text-anchor="middle" x="140" y="-2356.8" font-family="Times,serif" font-size="14.00">Add instructions to the</text>
+<text text-anchor="middle" x="140" y="-2341.8" font-family="Times,serif" font-size="14.00">README for updating this</text>
+<text text-anchor="middle" x="140" y="-2326.8" font-family="Times,serif" font-size="14.00">crate</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/ed25519&#45;zebra#79 -->
-<g id="node40" class="node closed">
+<g id="node42" class="node closed">
 <title>ZcashFoundation/ed25519&#45;zebra#79</title>
-<g id="a_node40"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/79" xlink:title="ZcashFoundation/ed25519&#45;zebra#79&#10;Tag a new &#160;ed25519&#45;zebra&#10;release" target="_blank">
-<polygon fill="#fad8c7" stroke="black" points="596,-2293.5 316,-2293.5 316,-2240.5 596,-2240.5 596,-2293.5"/>
-<text text-anchor="middle" x="456" y="-2278.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#79</text>
-<text text-anchor="middle" x="456" y="-2263.3" font-family="Times,serif" font-size="14.00">Tag a new &#160;ed25519&#45;zebra</text>
-<text text-anchor="middle" x="456" y="-2248.3" font-family="Times,serif" font-size="14.00">release</text>
+<g id="a_node42"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/79" xlink:title="ZcashFoundation/ed25519&#45;zebra#79&#10;Tag a new &#160;ed25519&#45;zebra&#10;release" target="_blank">
+<polygon fill="#fad8c7" stroke="black" points="596,-2379.5 316,-2379.5 316,-2326.5 596,-2326.5 596,-2379.5"/>
+<text text-anchor="middle" x="456" y="-2364.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#79</text>
+<text text-anchor="middle" x="456" y="-2349.3" font-family="Times,serif" font-size="14.00">Tag a new &#160;ed25519&#45;zebra</text>
+<text text-anchor="middle" x="456" y="-2334.3" font-family="Times,serif" font-size="14.00">release</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/ed25519&#45;zebra#77&#45;&gt;ZcashFoundation/ed25519&#45;zebra#79 -->
-<g id="edge18" class="edge">
+<g id="edge19" class="edge">
 <title>ZcashFoundation/ed25519&#45;zebra#77&#45;&gt;ZcashFoundation/ed25519&#45;zebra#79</title>
-<path fill="none" stroke="black" d="M280.1,-2267C288.49,-2267 296.96,-2267 305.4,-2267"/>
-<polygon fill="black" stroke="black" points="305.67,-2270.5 315.67,-2267 305.67,-2263.5 305.67,-2270.5"/>
+<path fill="none" stroke="black" d="M280.1,-2353C288.49,-2353 296.96,-2353 305.4,-2353"/>
+<polygon fill="black" stroke="black" points="305.67,-2356.5 315.67,-2353 305.67,-2349.5 305.67,-2356.5"/>
 </g>
 </g>
 </svg>
