--- a/zcash-zf-dag.html
+++ b/zcash-zf-dag.html
@@ -17,10 +17,10 @@
     </style>
   </head>
   <body>
-    <div id="dag"><svg width="871pt" height="2395pt"
- viewBox="0.00 0.00 871.00 2395.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 2391)">
-<polygon fill="white" stroke="transparent" points="-4,4 -4,-2391 867,-2391 867,4 -4,4"/>
+    <div id="dag"><svg width="871pt" height="2497pt"
+ viewBox="0.00 0.00 871.00 2497.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 2493)">
+<polygon fill="white" stroke="transparent" points="-4,4 -4,-2493 867,-2493 867,4 -4,4"/>
 <!-- ZcashFoundation/zebra#5297 -->
 <g id="node1" class="node open">
 <title>ZcashFoundation/zebra#5297</title>
@@ -613,34 +613,66 @@
 <path fill="none" stroke="black" d="M255.69,-2267C279.95,-2267 305.65,-2267 330.25,-2267"/>
 <polygon fill="black" stroke="black" points="330.35,-2270.5 340.35,-2267 330.35,-2263.5 330.35,-2270.5"/>
 </g>
-<!-- ZcashFoundation/ed25519&#45;zebra#77 -->
+<!-- ZcashFoundation/zebra#7772 -->
 <g id="node41" class="node open">
+<title>ZcashFoundation/zebra#7772</title>
+<g id="a_node41"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7772" xlink:title="ZcashFoundation/zebra#7772&#10;bug: zebrad will not&#10;reconnect after an&#10;internet connection&#10;failure and restore" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2402.5 24.5,-2402.5 24.5,-2319.5 255.5,-2319.5 255.5,-2402.5"/>
+<text text-anchor="middle" x="140" y="-2387.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7772</text>
+<text text-anchor="middle" x="140" y="-2372.3" font-family="Times,serif" font-size="14.00">bug: zebrad will not</text>
+<text text-anchor="middle" x="140" y="-2357.3" font-family="Times,serif" font-size="14.00">reconnect after an</text>
+<text text-anchor="middle" x="140" y="-2342.3" font-family="Times,serif" font-size="14.00">internet connection</text>
+<text text-anchor="middle" x="140" y="-2327.3" font-family="Times,serif" font-size="14.00">failure and restore</text>
+</a>
+</g>
+</g>
+<!-- ZcashFoundation/zebra#7847 -->
+<g id="node42" class="node open">
+<title>ZcashFoundation/zebra#7847</title>
+<g id="a_node42"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7847" xlink:title="ZcashFoundation/zebra#7847&#10;Reconnect to peers after&#10;arbitrarily long&#10;disconnections with&#10;exponential backoff" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" points="571.5,-2402.5 340.5,-2402.5 340.5,-2319.5 571.5,-2319.5 571.5,-2402.5"/>
+<text text-anchor="middle" x="456" y="-2387.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7847</text>
+<text text-anchor="middle" x="456" y="-2372.3" font-family="Times,serif" font-size="14.00">Reconnect to peers after</text>
+<text text-anchor="middle" x="456" y="-2357.3" font-family="Times,serif" font-size="14.00">arbitrarily long</text>
+<text text-anchor="middle" x="456" y="-2342.3" font-family="Times,serif" font-size="14.00">disconnections with</text>
+<text text-anchor="middle" x="456" y="-2327.3" font-family="Times,serif" font-size="14.00">exponential backoff</text>
+</a>
+</g>
+</g>
+<!-- ZcashFoundation/zebra#7772&#45;&gt;ZcashFoundation/zebra#7847 -->
+<g id="edge19" class="edge">
+<title>ZcashFoundation/zebra#7772&#45;&gt;ZcashFoundation/zebra#7847</title>
+<path fill="none" stroke="black" d="M255.69,-2361C279.95,-2361 305.65,-2361 330.25,-2361"/>
+<polygon fill="black" stroke="black" points="330.35,-2364.5 340.35,-2361 330.35,-2357.5 330.35,-2364.5"/>
+</g>
+<!-- ZcashFoundation/ed25519&#45;zebra#77 -->
+<g id="node43" class="node open">
 <title>ZcashFoundation/ed25519&#45;zebra#77</title>
-<g id="a_node41"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/77" xlink:title="ZcashFoundation/ed25519&#45;zebra#77&#10;Add instructions to the&#10;README for updating this&#10;crate" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="280,-2387 0,-2387 0,-2319 280,-2319 280,-2387"/>
-<text text-anchor="middle" x="140" y="-2371.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#77</text>
-<text text-anchor="middle" x="140" y="-2356.8" font-family="Times,serif" font-size="14.00">Add instructions to the</text>
-<text text-anchor="middle" x="140" y="-2341.8" font-family="Times,serif" font-size="14.00">README for updating this</text>
-<text text-anchor="middle" x="140" y="-2326.8" font-family="Times,serif" font-size="14.00">crate</text>
+<g id="a_node43"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/77" xlink:title="ZcashFoundation/ed25519&#45;zebra#77&#10;Add instructions to the&#10;README for updating this&#10;crate" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="280,-2489 0,-2489 0,-2421 280,-2421 280,-2489"/>
+<text text-anchor="middle" x="140" y="-2473.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#77</text>
+<text text-anchor="middle" x="140" y="-2458.8" font-family="Times,serif" font-size="14.00">Add instructions to the</text>
+<text text-anchor="middle" x="140" y="-2443.8" font-family="Times,serif" font-size="14.00">README for updating this</text>
+<text text-anchor="middle" x="140" y="-2428.8" font-family="Times,serif" font-size="14.00">crate</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/ed25519&#45;zebra#79 -->
-<g id="node42" class="node closed">
+<g id="node44" class="node closed">
 <title>ZcashFoundation/ed25519&#45;zebra#79</title>
-<g id="a_node42"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/79" xlink:title="ZcashFoundation/ed25519&#45;zebra#79&#10;Tag a new &#160;ed25519&#45;zebra&#10;release" target="_blank">
-<polygon fill="#fad8c7" stroke="black" points="596,-2379.5 316,-2379.5 316,-2326.5 596,-2326.5 596,-2379.5"/>
-<text text-anchor="middle" x="456" y="-2364.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#79</text>
-<text text-anchor="middle" x="456" y="-2349.3" font-family="Times,serif" font-size="14.00">Tag a new &#160;ed25519&#45;zebra</text>
-<text text-anchor="middle" x="456" y="-2334.3" font-family="Times,serif" font-size="14.00">release</text>
+<g id="a_node44"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/79" xlink:title="ZcashFoundation/ed25519&#45;zebra#79&#10;Tag a new &#160;ed25519&#45;zebra&#10;release" target="_blank">
+<polygon fill="#fad8c7" stroke="black" points="596,-2481.5 316,-2481.5 316,-2428.5 596,-2428.5 596,-2481.5"/>
+<text text-anchor="middle" x="456" y="-2466.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#79</text>
+<text text-anchor="middle" x="456" y="-2451.3" font-family="Times,serif" font-size="14.00">Tag a new &#160;ed25519&#45;zebra</text>
+<text text-anchor="middle" x="456" y="-2436.3" font-family="Times,serif" font-size="14.00">release</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/ed25519&#45;zebra#77&#45;&gt;ZcashFoundation/ed25519&#45;zebra#79 -->
-<g id="edge19" class="edge">
+<g id="edge20" class="edge">
 <title>ZcashFoundation/ed25519&#45;zebra#77&#45;&gt;ZcashFoundation/ed25519&#45;zebra#79</title>
-<path fill="none" stroke="black" d="M280.1,-2353C288.49,-2353 296.96,-2353 305.4,-2353"/>
-<polygon fill="black" stroke="black" points="305.67,-2356.5 315.67,-2353 305.67,-2349.5 305.67,-2356.5"/>
+<path fill="none" stroke="black" d="M280.1,-2455C288.49,-2455 296.96,-2455 305.4,-2455"/>
+<polygon fill="black" stroke="black" points="305.67,-2458.5 315.67,-2455 305.67,-2451.5 305.67,-2458.5"/>
 </g>
 </g>
 </svg>
