--- a/zcash-zf-dag.html
+++ b/zcash-zf-dag.html
@@ -641,13 +641,14 @@
 <!-- ZcashFoundation/zebra#7847 -->
 <g id="node43" class="node open">
 <title>ZcashFoundation/zebra#7847</title>
-<g id="a_node43"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7847" xlink:title="ZcashFoundation/zebra#7847&#10;Reconnect to peers after&#10;arbitrarily long&#10;disconnections with&#10;exponential backoff" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" points="571.5,-2409.5 340.5,-2409.5 340.5,-2326.5 571.5,-2326.5 571.5,-2409.5"/>
-<text text-anchor="middle" x="456" y="-2394.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7847</text>
-<text text-anchor="middle" x="456" y="-2379.3" font-family="Times,serif" font-size="14.00">Reconnect to peers after</text>
-<text text-anchor="middle" x="456" y="-2364.3" font-family="Times,serif" font-size="14.00">arbitrarily long</text>
-<text text-anchor="middle" x="456" y="-2349.3" font-family="Times,serif" font-size="14.00">disconnections with</text>
-<text text-anchor="middle" x="456" y="-2334.3" font-family="Times,serif" font-size="14.00">exponential backoff</text>
+<g id="a_node43"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7847" xlink:title="ZcashFoundation/zebra#7847&#10;Reconnect to peers after&#10;arbitrarily long&#10;disconnections with&#10;randomized exponential&#10;backoff" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" points="571.5,-2417 340.5,-2417 340.5,-2319 571.5,-2319 571.5,-2417"/>
+<text text-anchor="middle" x="456" y="-2401.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7847</text>
+<text text-anchor="middle" x="456" y="-2386.8" font-family="Times,serif" font-size="14.00">Reconnect to peers after</text>
+<text text-anchor="middle" x="456" y="-2371.8" font-family="Times,serif" font-size="14.00">arbitrarily long</text>
+<text text-anchor="middle" x="456" y="-2356.8" font-family="Times,serif" font-size="14.00">disconnections with</text>
+<text text-anchor="middle" x="456" y="-2341.8" font-family="Times,serif" font-size="14.00">randomized exponential</text>
+<text text-anchor="middle" x="456" y="-2326.8" font-family="Times,serif" font-size="14.00">backoff</text>
 </a>
 </g>
 </g>
