--- a/zcash-zf-dag.html
+++ b/zcash-zf-dag.html
@@ -342,10 +342,10 @@
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7764 -->
-<g id="node22" class="node open">
+<g id="node22" class="node closed">
 <title>ZcashFoundation/zebra#7764</title>
 <g id="a_node22"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7764" xlink:title="ZcashFoundation/zebra#7764&#10;Publish next Zebra&#10;release: 1.4.0" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" points="571.5,-1271.5 340.5,-1271.5 340.5,-1218.5 571.5,-1218.5 571.5,-1271.5"/>
+<polygon fill="#fad8c7" stroke="black" points="571.5,-1271.5 340.5,-1271.5 340.5,-1218.5 571.5,-1218.5 571.5,-1271.5"/>
 <text text-anchor="middle" x="456" y="-1256.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7764</text>
 <text text-anchor="middle" x="456" y="-1241.3" font-family="Times,serif" font-size="14.00">Publish next Zebra</text>
 <text text-anchor="middle" x="456" y="-1226.3" font-family="Times,serif" font-size="14.00">release: 1.4.0</text>
