--- a/zcash-zf-dag.html
+++ b/zcash-zf-dag.html
@@ -17,10 +17,10 @@
     </style>
   </head>
   <body>
-    <div id="dag"><svg width="871pt" height="2354pt"
- viewBox="0.00 0.00 871.00 2354.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 2350)">
-<polygon fill="white" stroke="transparent" points="-4,4 -4,-2350 867,-2350 867,4 -4,4"/>
+    <div id="dag"><svg width="871pt" height="2582pt"
+ viewBox="0.00 0.00 871.00 2582.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 2578)">
+<polygon fill="white" stroke="transparent" points="-4,4 -4,-2578 867,-2578 867,4 -4,4"/>
 <!-- ZcashFoundation/zebra#5297 -->
 <g id="node1" class="node open">
 <title>ZcashFoundation/zebra#5297</title>
@@ -666,34 +666,109 @@
 <path fill="none" stroke="black" d="M571.83,-2218C588.18,-2218 605.05,-2218 621.57,-2218"/>
 <polygon fill="black" stroke="black" points="621.81,-2221.5 631.81,-2218 621.81,-2214.5 621.81,-2221.5"/>
 </g>
-<!-- ZcashFoundation/ed25519&#45;zebra#77 -->
+<!-- ZcashFoundation/zebra#7905 -->
 <g id="node44" class="node open">
+<title>ZcashFoundation/zebra#7905</title>
+<g id="a_node44"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7905" xlink:title="ZcashFoundation/zebra#7905&#10;feat(zebra&#45;scan): Create&#10;the scanner task" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2401.5 24.5,-2401.5 24.5,-2348.5 255.5,-2348.5 255.5,-2401.5"/>
+<text text-anchor="middle" x="140" y="-2386.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7905</text>
+<text text-anchor="middle" x="140" y="-2371.3" font-family="Times,serif" font-size="14.00">feat(zebra&#45;scan): Create</text>
+<text text-anchor="middle" x="140" y="-2356.3" font-family="Times,serif" font-size="14.00">the scanner task</text>
+</a>
+</g>
+</g>
+<!-- ZcashFoundation/zebra#7907 -->
+<g id="node45" class="node open">
+<title>ZcashFoundation/zebra#7907</title>
+<g id="a_node45"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7907" xlink:title="ZcashFoundation/zebra#7907&#10;feat(zebra&#45;scan): Make&#10;the scanner send data to&#10;the broadcast channel" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" points="571.5,-2373 340.5,-2373 340.5,-2305 571.5,-2305 571.5,-2373"/>
+<text text-anchor="middle" x="456" y="-2357.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7907</text>
+<text text-anchor="middle" x="456" y="-2342.8" font-family="Times,serif" font-size="14.00">feat(zebra&#45;scan): Make</text>
+<text text-anchor="middle" x="456" y="-2327.8" font-family="Times,serif" font-size="14.00">the scanner send data to</text>
+<text text-anchor="middle" x="456" y="-2312.8" font-family="Times,serif" font-size="14.00">the broadcast channel</text>
+</a>
+</g>
+</g>
+<!-- ZcashFoundation/zebra#7905&#45;&gt;ZcashFoundation/zebra#7907 -->
+<g id="edge21" class="edge">
+<title>ZcashFoundation/zebra#7905&#45;&gt;ZcashFoundation/zebra#7907</title>
+<path fill="none" stroke="black" d="M255.69,-2361.9C279.95,-2359.1 305.65,-2356.1 330.25,-2353.3"/>
+<polygon fill="black" stroke="black" points="330.83,-2356.76 340.35,-2352.1 330.01,-2349.8 330.83,-2356.76"/>
+</g>
+<!-- ZcashFoundation/zebra#7906 -->
+<g id="node46" class="node open">
+<title>ZcashFoundation/zebra#7906</title>
+<g id="a_node46"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7906" xlink:title="ZcashFoundation/zebra#7906&#10;feat(zebra&#45;scan): Create&#10;a broadcast channel" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2330.5 24.5,-2330.5 24.5,-2277.5 255.5,-2277.5 255.5,-2330.5"/>
+<text text-anchor="middle" x="140" y="-2315.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7906</text>
+<text text-anchor="middle" x="140" y="-2300.3" font-family="Times,serif" font-size="14.00">feat(zebra&#45;scan): Create</text>
+<text text-anchor="middle" x="140" y="-2285.3" font-family="Times,serif" font-size="14.00">a broadcast channel</text>
+</a>
+</g>
+</g>
+<!-- ZcashFoundation/zebra#7906&#45;&gt;ZcashFoundation/zebra#7907 -->
+<g id="edge22" class="edge">
+<title>ZcashFoundation/zebra#7906&#45;&gt;ZcashFoundation/zebra#7907</title>
+<path fill="none" stroke="black" d="M255.69,-2316.8C279.95,-2319.5 305.65,-2322.4 330.25,-2325.1"/>
+<polygon fill="black" stroke="black" points="330.03,-2328.6 340.35,-2326.2 330.79,-2321.64 330.03,-2328.6"/>
+</g>
+<!-- ZcashFoundation/zebra#7903 -->
+<g id="node47" class="node open">
+<title>ZcashFoundation/zebra#7903</title>
+<g id="a_node47"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7903" xlink:title="ZcashFoundation/zebra#7903&#10;test: &#160;Scan a&#10;`populated_state()` for&#10;the zecpages viewing key" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2488 24.5,-2488 24.5,-2420 255.5,-2420 255.5,-2488"/>
+<text text-anchor="middle" x="140" y="-2472.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7903</text>
+<text text-anchor="middle" x="140" y="-2457.8" font-family="Times,serif" font-size="14.00">test: &#160;Scan a</text>
+<text text-anchor="middle" x="140" y="-2442.8" font-family="Times,serif" font-size="14.00">`populated_state()` for</text>
+<text text-anchor="middle" x="140" y="-2427.8" font-family="Times,serif" font-size="14.00">the zecpages viewing key</text>
+</a>
+</g>
+</g>
+<!-- ZcashFoundation/zebra#7727 -->
+<g id="node48" class="node open">
+<title>ZcashFoundation/zebra#7727</title>
+<g id="a_node48"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7727" xlink:title="ZcashFoundation/zebra#7727&#10;feature: Blockchain&#10;scanner PoC" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" points="571.5,-2480.5 340.5,-2480.5 340.5,-2427.5 571.5,-2427.5 571.5,-2480.5"/>
+<text text-anchor="middle" x="456" y="-2465.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7727</text>
+<text text-anchor="middle" x="456" y="-2450.3" font-family="Times,serif" font-size="14.00">feature: Blockchain</text>
+<text text-anchor="middle" x="456" y="-2435.3" font-family="Times,serif" font-size="14.00">scanner PoC</text>
+</a>
+</g>
+</g>
+<!-- ZcashFoundation/zebra#7903&#45;&gt;ZcashFoundation/zebra#7727 -->
+<g id="edge23" class="edge">
+<title>ZcashFoundation/zebra#7903&#45;&gt;ZcashFoundation/zebra#7727</title>
+<path fill="none" stroke="black" d="M255.69,-2454C279.95,-2454 305.65,-2454 330.25,-2454"/>
+<polygon fill="black" stroke="black" points="330.35,-2457.5 340.35,-2454 330.35,-2450.5 330.35,-2457.5"/>
+</g>
+<!-- ZcashFoundation/ed25519&#45;zebra#77 -->
+<g id="node49" class="node open">
 <title>ZcashFoundation/ed25519&#45;zebra#77</title>
-<g id="a_node44"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/77" xlink:title="ZcashFoundation/ed25519&#45;zebra#77&#10;Add instructions to the&#10;README for updating this&#10;crate" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="280,-2346 0,-2346 0,-2278 280,-2278 280,-2346"/>
-<text text-anchor="middle" x="140" y="-2330.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#77</text>
-<text text-anchor="middle" x="140" y="-2315.8" font-family="Times,serif" font-size="14.00">Add instructions to the</text>
-<text text-anchor="middle" x="140" y="-2300.8" font-family="Times,serif" font-size="14.00">README for updating this</text>
-<text text-anchor="middle" x="140" y="-2285.8" font-family="Times,serif" font-size="14.00">crate</text>
+<g id="a_node49"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/77" xlink:title="ZcashFoundation/ed25519&#45;zebra#77&#10;Add instructions to the&#10;README for updating this&#10;crate" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="280,-2574 0,-2574 0,-2506 280,-2506 280,-2574"/>
+<text text-anchor="middle" x="140" y="-2558.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#77</text>
+<text text-anchor="middle" x="140" y="-2543.8" font-family="Times,serif" font-size="14.00">Add instructions to the</text>
+<text text-anchor="middle" x="140" y="-2528.8" font-family="Times,serif" font-size="14.00">README for updating this</text>
+<text text-anchor="middle" x="140" y="-2513.8" font-family="Times,serif" font-size="14.00">crate</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/ed25519&#45;zebra#79 -->
-<g id="node45" class="node closed">
+<g id="node50" class="node closed">
 <title>ZcashFoundation/ed25519&#45;zebra#79</title>
-<g id="a_node45"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/79" xlink:title="ZcashFoundation/ed25519&#45;zebra#79&#10;Tag a new &#160;ed25519&#45;zebra&#10;release" target="_blank">
-<polygon fill="#fad8c7" stroke="black" points="596,-2338.5 316,-2338.5 316,-2285.5 596,-2285.5 596,-2338.5"/>
-<text text-anchor="middle" x="456" y="-2323.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#79</text>
-<text text-anchor="middle" x="456" y="-2308.3" font-family="Times,serif" font-size="14.00">Tag a new &#160;ed25519&#45;zebra</text>
-<text text-anchor="middle" x="456" y="-2293.3" font-family="Times,serif" font-size="14.00">release</text>
+<g id="a_node50"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/79" xlink:title="ZcashFoundation/ed25519&#45;zebra#79&#10;Tag a new &#160;ed25519&#45;zebra&#10;release" target="_blank">
+<polygon fill="#fad8c7" stroke="black" points="596,-2566.5 316,-2566.5 316,-2513.5 596,-2513.5 596,-2566.5"/>
+<text text-anchor="middle" x="456" y="-2551.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#79</text>
+<text text-anchor="middle" x="456" y="-2536.3" font-family="Times,serif" font-size="14.00">Tag a new &#160;ed25519&#45;zebra</text>
+<text text-anchor="middle" x="456" y="-2521.3" font-family="Times,serif" font-size="14.00">release</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/ed25519&#45;zebra#77&#45;&gt;ZcashFoundation/ed25519&#45;zebra#79 -->
-<g id="edge21" class="edge">
+<g id="edge24" class="edge">
 <title>ZcashFoundation/ed25519&#45;zebra#77&#45;&gt;ZcashFoundation/ed25519&#45;zebra#79</title>
-<path fill="none" stroke="black" d="M280.1,-2312C288.49,-2312 296.96,-2312 305.4,-2312"/>
-<polygon fill="black" stroke="black" points="305.67,-2315.5 315.67,-2312 305.67,-2308.5 305.67,-2315.5"/>
+<path fill="none" stroke="black" d="M280.1,-2540C288.49,-2540 296.96,-2540 305.4,-2540"/>
+<polygon fill="black" stroke="black" points="305.67,-2543.5 315.67,-2540 305.67,-2536.5 305.67,-2543.5"/>
 </g>
 </g>
 </svg>
