--- a/zcash-zf-dag.html
+++ b/zcash-zf-dag.html
@@ -715,12 +715,12 @@
 <!-- ZcashFoundation/zebra#7903 -->
 <g id="node47" class="node open">
 <title>ZcashFoundation/zebra#7903</title>
-<g id="a_node47"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7903" xlink:title="ZcashFoundation/zebra#7903&#10;test: &#160;Scan a&#10;`populated_state()` for&#10;the zecpages viewing key" target="_blank">
+<g id="a_node47"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7903" xlink:title="ZcashFoundation/zebra#7903&#10;test: &#160;Scan a&#10;`populated_state()` for&#10;the ZECpages viewing key" target="_blank">
 <polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2488 24.5,-2488 24.5,-2420 255.5,-2420 255.5,-2488"/>
 <text text-anchor="middle" x="140" y="-2472.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7903</text>
 <text text-anchor="middle" x="140" y="-2457.8" font-family="Times,serif" font-size="14.00">test: &#160;Scan a</text>
 <text text-anchor="middle" x="140" y="-2442.8" font-family="Times,serif" font-size="14.00">`populated_state()` for</text>
-<text text-anchor="middle" x="140" y="-2427.8" font-family="Times,serif" font-size="14.00">the zecpages viewing key</text>
+<text text-anchor="middle" x="140" y="-2427.8" font-family="Times,serif" font-size="14.00">the ZECpages viewing key</text>
 </a>
 </g>
 </g>
