--- a/zcash-zf-dag.html
+++ b/zcash-zf-dag.html
@@ -725,10 +725,10 @@
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7727 -->
-<g id="node48" class="node open">
+<g id="node48" class="node closed">
 <title>ZcashFoundation/zebra#7727</title>
 <g id="a_node48"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7727" xlink:title="ZcashFoundation/zebra#7727&#10;feature: Blockchain&#10;scanner PoC" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" points="571.5,-2480.5 340.5,-2480.5 340.5,-2427.5 571.5,-2427.5 571.5,-2480.5"/>
+<polygon fill="#fad8c7" stroke="black" points="571.5,-2480.5 340.5,-2480.5 340.5,-2427.5 571.5,-2427.5 571.5,-2480.5"/>
 <text text-anchor="middle" x="456" y="-2465.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7727</text>
 <text text-anchor="middle" x="456" y="-2450.3" font-family="Times,serif" font-size="14.00">feature: Blockchain</text>
 <text text-anchor="middle" x="456" y="-2435.3" font-family="Times,serif" font-size="14.00">scanner PoC</text>
