--- a/zcash-zf-dag.html
+++ b/zcash-zf-dag.html
@@ -17,10 +17,10 @@
     </style>
   </head>
   <body>
-    <div id="dag"><svg width="871pt" height="2668pt"
- viewBox="0.00 0.00 871.00 2668.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 2664)">
-<polygon fill="white" stroke="transparent" points="-4,4 -4,-2664 867,-2664 867,4 -4,4"/>
+    <div id="dag"><svg width="871pt" height="2683pt"
+ viewBox="0.00 0.00 871.00 2683.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 2679)">
+<polygon fill="white" stroke="transparent" points="-4,4 -4,-2679 867,-2679 867,4 -4,4"/>
 <!-- ZcashFoundation/zebra#5297 -->
 <g id="node1" class="node open">
 <title>ZcashFoundation/zebra#5297</title>
@@ -700,11 +700,12 @@
 <!-- ZcashFoundation/zebra#7905 -->
 <g id="node46" class="node open">
 <title>ZcashFoundation/zebra#7905</title>
-<g id="a_node46"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7905" xlink:title="ZcashFoundation/zebra#7905&#10;feat(zebra&#45;scan): Create&#10;the scanner task" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2573.5 24.5,-2573.5 24.5,-2520.5 255.5,-2520.5 255.5,-2573.5"/>
-<text text-anchor="middle" x="140" y="-2558.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7905</text>
-<text text-anchor="middle" x="140" y="-2543.3" font-family="Times,serif" font-size="14.00">feat(zebra&#45;scan): Create</text>
-<text text-anchor="middle" x="140" y="-2528.3" font-family="Times,serif" font-size="14.00">the scanner task</text>
+<g id="a_node46"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7905" xlink:title="ZcashFoundation/zebra#7905&#10;feat(zebra&#45;scan): Create&#10;a scanner task for new&#10;blocks" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2589 24.5,-2589 24.5,-2521 255.5,-2521 255.5,-2589"/>
+<text text-anchor="middle" x="140" y="-2573.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7905</text>
+<text text-anchor="middle" x="140" y="-2558.8" font-family="Times,serif" font-size="14.00">feat(zebra&#45;scan): Create</text>
+<text text-anchor="middle" x="140" y="-2543.8" font-family="Times,serif" font-size="14.00">a scanner task for new</text>
+<text text-anchor="middle" x="140" y="-2528.8" font-family="Times,serif" font-size="14.00">blocks</text>
 </a>
 </g>
 </g>
@@ -712,19 +713,19 @@
 <g id="node47" class="node open">
 <title>ZcashFoundation/zebra#7907</title>
 <g id="a_node47"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7907" xlink:title="ZcashFoundation/zebra#7907&#10;feat(zebra&#45;scan): Make&#10;the scanner send data to&#10;the results channel" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" points="571.5,-2545 340.5,-2545 340.5,-2477 571.5,-2477 571.5,-2545"/>
-<text text-anchor="middle" x="456" y="-2529.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7907</text>
-<text text-anchor="middle" x="456" y="-2514.8" font-family="Times,serif" font-size="14.00">feat(zebra&#45;scan): Make</text>
-<text text-anchor="middle" x="456" y="-2499.8" font-family="Times,serif" font-size="14.00">the scanner send data to</text>
-<text text-anchor="middle" x="456" y="-2484.8" font-family="Times,serif" font-size="14.00">the results channel</text>
+<polygon fill="#c2e0c6" stroke="black" points="571.5,-2549 340.5,-2549 340.5,-2481 571.5,-2481 571.5,-2549"/>
+<text text-anchor="middle" x="456" y="-2533.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7907</text>
+<text text-anchor="middle" x="456" y="-2518.8" font-family="Times,serif" font-size="14.00">feat(zebra&#45;scan): Make</text>
+<text text-anchor="middle" x="456" y="-2503.8" font-family="Times,serif" font-size="14.00">the scanner send data to</text>
+<text text-anchor="middle" x="456" y="-2488.8" font-family="Times,serif" font-size="14.00">the results channel</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7905&#45;&gt;ZcashFoundation/zebra#7907 -->
 <g id="edge22" class="edge">
 <title>ZcashFoundation/zebra#7905&#45;&gt;ZcashFoundation/zebra#7907</title>
-<path fill="none" stroke="black" d="M255.69,-2533.9C279.95,-2531.1 305.65,-2528.1 330.25,-2525.3"/>
-<polygon fill="black" stroke="black" points="330.83,-2528.76 340.35,-2524.1 330.01,-2521.8 330.83,-2528.76"/>
+<path fill="none" stroke="black" d="M255.69,-2540.4C279.95,-2537.3 305.65,-2534 330.25,-2530.9"/>
+<polygon fill="black" stroke="black" points="330.88,-2534.35 340.35,-2529.6 329.98,-2527.41 330.88,-2534.35"/>
 </g>
 <!-- ZcashFoundation/zebra#7906 -->
 <g id="node48" class="node open">
@@ -740,18 +741,18 @@
 <!-- ZcashFoundation/zebra#7906&#45;&gt;ZcashFoundation/zebra#7907 -->
 <g id="edge23" class="edge">
 <title>ZcashFoundation/zebra#7906&#45;&gt;ZcashFoundation/zebra#7907</title>
-<path fill="none" stroke="black" d="M255.69,-2488.8C279.95,-2491.5 305.65,-2494.4 330.25,-2497.1"/>
-<polygon fill="black" stroke="black" points="330.03,-2500.6 340.35,-2498.2 330.79,-2493.64 330.03,-2500.6"/>
+<path fill="none" stroke="black" d="M255.69,-2490.2C279.95,-2493.3 305.65,-2496.5 330.25,-2499.5"/>
+<polygon fill="black" stroke="black" points="329.98,-2502.99 340.35,-2500.8 330.88,-2496.05 329.98,-2502.99"/>
 </g>
 <!-- ZcashFoundation/ed25519&#45;zebra#77 -->
 <g id="node49" class="node open">
 <title>ZcashFoundation/ed25519&#45;zebra#77</title>
 <g id="a_node49"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/77" xlink:title="ZcashFoundation/ed25519&#45;zebra#77&#10;Add instructions to the&#10;README for updating this&#10;crate" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="280,-2660 0,-2660 0,-2592 280,-2592 280,-2660"/>
-<text text-anchor="middle" x="140" y="-2644.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#77</text>
-<text text-anchor="middle" x="140" y="-2629.8" font-family="Times,serif" font-size="14.00">Add instructions to the</text>
-<text text-anchor="middle" x="140" y="-2614.8" font-family="Times,serif" font-size="14.00">README for updating this</text>
-<text text-anchor="middle" x="140" y="-2599.8" font-family="Times,serif" font-size="14.00">crate</text>
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="280,-2675 0,-2675 0,-2607 280,-2607 280,-2675"/>
+<text text-anchor="middle" x="140" y="-2659.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#77</text>
+<text text-anchor="middle" x="140" y="-2644.8" font-family="Times,serif" font-size="14.00">Add instructions to the</text>
+<text text-anchor="middle" x="140" y="-2629.8" font-family="Times,serif" font-size="14.00">README for updating this</text>
+<text text-anchor="middle" x="140" y="-2614.8" font-family="Times,serif" font-size="14.00">crate</text>
 </a>
 </g>
 </g>
@@ -759,18 +760,18 @@
 <g id="node50" class="node closed">
 <title>ZcashFoundation/ed25519&#45;zebra#79</title>
 <g id="a_node50"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/79" xlink:title="ZcashFoundation/ed25519&#45;zebra#79&#10;Tag a new &#160;ed25519&#45;zebra&#10;release" target="_blank">
-<polygon fill="#fad8c7" stroke="black" points="596,-2652.5 316,-2652.5 316,-2599.5 596,-2599.5 596,-2652.5"/>
-<text text-anchor="middle" x="456" y="-2637.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#79</text>
-<text text-anchor="middle" x="456" y="-2622.3" font-family="Times,serif" font-size="14.00">Tag a new &#160;ed25519&#45;zebra</text>
-<text text-anchor="middle" x="456" y="-2607.3" font-family="Times,serif" font-size="14.00">release</text>
+<polygon fill="#fad8c7" stroke="black" points="596,-2667.5 316,-2667.5 316,-2614.5 596,-2614.5 596,-2667.5"/>
+<text text-anchor="middle" x="456" y="-2652.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#79</text>
+<text text-anchor="middle" x="456" y="-2637.3" font-family="Times,serif" font-size="14.00">Tag a new &#160;ed25519&#45;zebra</text>
+<text text-anchor="middle" x="456" y="-2622.3" font-family="Times,serif" font-size="14.00">release</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/ed25519&#45;zebra#77&#45;&gt;ZcashFoundation/ed25519&#45;zebra#79 -->
 <g id="edge24" class="edge">
 <title>ZcashFoundation/ed25519&#45;zebra#77&#45;&gt;ZcashFoundation/ed25519&#45;zebra#79</title>
-<path fill="none" stroke="black" d="M280.1,-2626C288.49,-2626 296.96,-2626 305.4,-2626"/>
-<polygon fill="black" stroke="black" points="305.67,-2629.5 315.67,-2626 305.67,-2622.5 305.67,-2629.5"/>
+<path fill="none" stroke="black" d="M280.1,-2641C288.49,-2641 296.96,-2641 305.4,-2641"/>
+<polygon fill="black" stroke="black" points="305.67,-2644.5 315.67,-2641 305.67,-2637.5 305.67,-2644.5"/>
 </g>
 </g>
 </svg>
