--- a/zcash-zf-dag.html
+++ b/zcash-zf-dag.html
@@ -758,10 +758,10 @@
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7935 -->
-<g id="node50" class="node open">
+<g id="node50" class="node closed">
 <title>ZcashFoundation/zebra#7935</title>
 <g id="a_node50"><a xlink:href="https://github.com/ZcashFoundation/zebra/pull/7935" xlink:title="ZcashFoundation/zebra#7935&#10;feat(zebra&#45;state): Adds a&#10;method to ChainTipChange&#10;for getting unseen blocks&#10;when the best chain&#10;changes" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" points="571.5,-2698 340.5,-2698 340.5,-2694 336.5,-2694 336.5,-2690 340.5,-2690 340.5,-2608 336.5,-2608 336.5,-2604 340.5,-2604 340.5,-2600 571.5,-2600 571.5,-2698"/>
+<polygon fill="#fad8c7" stroke="black" points="571.5,-2698 340.5,-2698 340.5,-2694 336.5,-2694 336.5,-2690 340.5,-2690 340.5,-2608 336.5,-2608 336.5,-2604 340.5,-2604 340.5,-2600 571.5,-2600 571.5,-2698"/>
 <polyline fill="none" stroke="black" points="340.5,-2694 344.5,-2694 344.5,-2690 340.5,-2690 "/>
 <polyline fill="none" stroke="black" points="340.5,-2608 344.5,-2608 344.5,-2604 340.5,-2604 "/>
 <text text-anchor="middle" x="456" y="-2682.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7935</text>
